# to_do_list_website

./: README.md  main.py  pyproject.toml
templates/: base.html  header.html  index.html  new_list.html
to_do_app/: app.py  extensions.py  main.py  settings.py
to_do_app/public/: forms.py  models.py  views.py
to_do_app/static/assets/: styles.css
to_do_app/templates/: active_list.html  base.html  footer.html  header.html  index.html  login.html  new_list.html  registration.html  users_lists.html
to_do_app/user/: forms.py  models.py  views.py
